# toolbox

./: README.md
.github/workflows/: release.yml
vgoog/: Cargo.toml  PHASE1_PLAN.md  README.md
vgoog/src/: auth.rs  client.rs  config.rs  error.rs  main.rs
vgoog/src/api/: apps_script.rs  calendar.rs  docs.rs  drive.rs  forms.rs  gmail.rs  mod.rs  people.rs  sheets.rs  slides.rs  tasks.rs
vgoog/src/cli/: apps_script.rs  calendar.rs  docs.rs  drive.rs  exec.rs  forms.rs  gmail.rs  mod.rs  people.rs  sheets.rs  slides.rs  tasks.rs
vgoog/src/ui/: app.rs
vgoog/src/ui/views/: handlers.rs  mod.rs  render.rs
